Use jinja2 as a template engine

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>{site_name}</title>
+  <title>{{ site_name }}</title>
   <meta charset="UTF-8">
   <style>
     video#bgvid {
@@ -18,7 +18,7 @@
 </head>
 <body>
 <video autoplay loop id="bgvid">
-  <source src="{video_name}" type="{video_mime}">
+  <source src="{{ video_name }}" type="{{ video_mime }}">
 </video>
 </body>
 </html>
