--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <video autoplay loop id="bgvid">
-  <source src="{{ video_name }}" type="{{ video_mime }}">
+  <source src="video.mp4" type="video/mp4">
 </video>
 </body>
 </html>
